--- a/admin-login.html
+++ b/admin-login.html
@@ -68,13 +68,13 @@
                             </div>
                             <div class="d-flex flex-column text-center">
                                 <form>
-                                <div class="form-group">
-                                    <input type="email" class="form-control btn-round px-3" id="email1"placeholder="Email">
-                                </div>
-                                <div class="form-group">
-                                    <input type="password" class="form-control btn-round px-3" id="password1" placeholder="Mật khẩu">
-                                </div>
-                                <button id="buttonLogin" type="button" data-dismiss="modal" class="btn btn-black btn-block btn-round">Đăng nhập</button>
+                                    <div class="form-group">
+                                        <input type="email" class="form-control btn-round px-3" id="email1"placeholder="Email">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" class="form-control btn-round px-3" id="password1" placeholder="Mật khẩu">
+                                    </div>
+                                    <button id="buttonLogin" type="button" data-dismiss="modal" class="btn btn-black btn-block btn-round">Đăng nhập</button>
                                 </form>
                             </div>
                             <!-- <div style="justify-content: space-between; padding: 5px 0px;" class="d-flex extendForm">
@@ -168,34 +168,36 @@
             <div class="card-body pt-0">
                 <form action="./admin-index.html" method="get">
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Email</label>
-                        <input type="email" class="form-control bg-light" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                        <label for="exampleInputEmail1">Email:</label>
+                        <input type="email" class="form-control bg-light" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Nhập email">
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Mật khẩu</label>
-                        <input type="password" class="form-control bg-light" id="exampleInputPassword1" placeholder="Password">
+                        <label for="exampleInputPassword1">Mật khẩu:</label>
+                        <input type="password" class="form-control bg-light" id="exampleInputPassword1" placeholder="Nhập mật khẩu">
                     </div>
                     <div class="row">
                         <div class="col-lg-8">
                             <div class="form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                <label class="form-check-label" for="exampleCheck1">Ghi nhớ đăng nhập</label>
+                                <input type="checkbox" style="width: 20px; height: 20px;" class="form-check-input" id="exampleCheck1">
+                                <label class="form-check-label pl-2 pt-1" for="exampleCheck1">Ghi nhớ đăng nhập</label>
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="form-check text-right">
-                                <a class="text-dark" href="">Quên mật khẩu</a>
+                                <a class="text-dark" href="">Quên mật khẩu ?</a>
                             </div>
                         </div>
                     </div>
                     <div class="row mt-4">
-                        <button type="submit" class="btn btn-dark btn-block mx-5">Đăng nhập</button>
+                        <button type="submit" class="btn btn-block mx-2" style="background-color: rgb(134, 16, 16); color: white;">Đăng nhập</button>
                     </div>
                 </form>
             </div>
         </div>
     </div>
 
+
+   </div>
 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
