--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SCARLET</title>
-    <link rel="icon" type="image/x-icon" href="./img/logo/logonew-03.jpg">
+    <link rel="icon" type="image/x-icon" href="./img/logo/favicon.png">
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700;800;900&display=swap"
     rel="stylesheet">
@@ -183,8 +183,8 @@
                                 <input id="search" type="text" name="search" placeholder="Search..">
                             </div>
                             <div class="col-lg-2 col-md-2">
-                                <i class="fa fa-heart d-block text-danger text-center"></i>
-                                <span class="d-block">Yêu thích</span>
+                                <a href="./favourite.html" class="d-block m-0"><i class="fa fa-heart d-block text-danger text-center"></i></a>
+                                <span class="d-block text-center cursor-pointer"><a href="./favourite.html" style="color: black;">Yêu thích</a></span>
                             </div>
                             <div id="loginName" class="col-lg-2 col-md-2">
                                 <i class="fa fa-user-circle d-block text-danger text-center" data-toggle="modal" data-target="#exampleModal"></i>
@@ -410,7 +410,7 @@
         <section class="product spad pt-4 hide-on-menu-responsive-expand">
             <div class="container">
                 <div class="row product__filter">
-                    <div class="col-12 py-3">
+                    <div class="col-12 py-3 mb-3">
                         <h3 class="text-center"><strong>SẢN PHẨM BÁN CHẠY</strong></h3>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-6 col-md-6 col-sm-6 mix hot-sales">
@@ -915,33 +915,33 @@
                 <div class="row mb-3">
                     <h3 class="w-100 text-center"><strong>TIN TỨC</strong></h3>
                 </div>
-                <div class="row product__filter">
+                <div class="row product__filter" style="flex-wrap: nowrap !important; overflow: scroll;">
                     <div class="col-lg-3 col-md-6 col-sm-6 col-md-6 col-sm-6 mix new-arrivals">
                         <div class="product__item">
                             <div class="product__item__news set-bg" data-setbg="img/tintuc/1.png">
                             </div>
-                            <div class="p-2 text-center"><strong>SỰ KIỆN SIÊU SALE ĐẦU NĂM</strong></div>
+                            <div class="p-2 text-center big-size-responsive"><strong>SỰ KIỆN SIÊU SALE ĐẦU NĂM</strong></div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-6 col-md-6 col-sm-6 mix hot-sales">
                         <div class="product__item">
                             <div class="product__item__news set-bg" data-setbg="img/tintuc/3.png">
                             </div>
-                            <div class="p-2 text-center"><strong>ĐỒNG GIÁ 149K - 199K TOÀN BỘ CỬA HÀNG</strong></div>
+                            <div class="p-2 text-center big-size-responsive"><strong>ĐỒNG GIÁ 149K - 199K TOÀN BỘ CỬA HÀNG</strong></div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-6 col-md-6 col-sm-6 mix new-arrivals">
                         <div class="product__item sale">
                             <div class="product__item__news set-bg" data-setbg="img/tintuc/5.png">
                             </div>
-                            <div class="p-2 text-center"><strong>101 CÁCH PHỐI ĐỒ ĐẸP MẮT ĐẦU NĂM 2024</strong></div>
+                            <div class="p-2 text-center big-size-responsive"><strong>101 CÁCH PHỐI ĐỒ ĐẸP MẮT ĐẦU NĂM 2024</strong></div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-6 col-md-6 col-sm-6 mix hot-sales">
                         <div class="product__item">
                             <div class="product__item__news set-bg" data-setbg="img/tintuc/2.jpg">
                             </div>
-                            <div class="p-2 text-center"><strong>5 CÁCH PHỐI ĐỒ VỚI ÁO POLO NAM ĐỂ TẠO PHONG CÁCH THỜI TRANG ĐẲNG CẤP</strong></div>
+                            <div class="p-2 text-center"><strong class="big-size-responsive">5 CÁCH PHỐI ĐỒ VỚI ÁO POLO NAM ĐỂ TẠO PHONG CÁCH THỜI TRANG ĐẲNG CẤP</strong></div>
                         </div>
                     </div>
                 </div>
