--- a/login-responsive.html
+++ b/login-responsive.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SCARLET</title>
-    <link rel="icon" type="image/x-icon" href="./img/logo/logonew-03.jpg">
+    <link rel="icon" type="image/x-icon" href="./img/logo/favicon.png">
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700;800;900&display=swap"
     rel="stylesheet">
@@ -88,6 +88,8 @@
                 <h4 class="text-center">BẢN QUYỀN THUỘC THỜI TRANG SCARLET</h4>
             </div>
         </div>
+   </div>
+
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
