--- a/admin-employee-edit.html
+++ b/admin-employee-edit.html
@@ -208,6 +208,8 @@
         </div>
     </div>
 
+   </div>
+
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
