--- a/admin-new-add.html
+++ b/admin-new-add.html
@@ -195,6 +195,8 @@
         </div>
     </div>
 
+   </div>
+
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
