--- a/admin-new-edit.html
+++ b/admin-new-edit.html
@@ -205,6 +205,8 @@
         </div>
     </div>
 
+   </div>
+
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
