--- a/admin-orders.html
+++ b/admin-orders.html
@@ -278,6 +278,8 @@
         }
     </script>
 
+   </div>
+
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
