--- a/admin-product-add.html
+++ b/admin-product-add.html
@@ -337,6 +337,8 @@
         // }
     </script>
 
+   </div>
+
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
