--- a/product-details.html
+++ b/product-details.html
@@ -126,7 +126,7 @@
                         <ul class="d-flex" style="justify-content: space-around;">
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="./best-seller.html">Sản phẩm bán chạy</a></li>
-                            <li><a href="./female.html">Nữ</a></li>
+                            <li class="active"><a href="./female.html">Nữ</a></li>
                             <li><a href="./male.html">Nam</a></li>
                             <li><a href="./news.html">Tin tức</a></li>
                         </ul>
@@ -143,14 +143,14 @@
                 <div class="pos-f-t">
                     <div class="collapse" id="navbarToggleExternalContent">
                         <div class="row">
-                            <div id="loginName" class="col-6 item-menu-responsive-extends">
+                            <div id="loginNameResponsive" class="col-6 item-menu-responsive-extends">
                                 <a href="./login-responsive.html" style="color: black; font-size: 30px; cursor: pointer;">
                                     <i class="fa fa-user-circle-o px-3 py-2" style="font-size: 30px; color: rgb(192, 1, 1);" aria-hidden="true"></i>
                                     TÀI KHOẢN
                                 </a>
                             </div>
-                            <div id="username" class="d-none col-6 item-menu-responsive-extends">
-                                <a href="./account.html" class="d-none" style="color: black; font-size: 30px; cursor: pointer;">
+                            <div id="usernameResponsive" class="d-none col-6 item-menu-responsive-extends">
+                                <a href="./account-responsive/summary.html" style="color: black; font-size: 30px; cursor: pointer;">
                                     <i class="fa fa-user-circle-o px-3 py-2" style="font-size: 30px; color: rgb(192, 1, 1);" aria-hidden="true"></i>
                                     SƠN HÀ
                                 </a>
@@ -246,7 +246,7 @@
 
         <!-- Product Section Begin -->
         <section class="shop-details product spad hide-on-menu-responsive-expand" style="background-color: #FAFAFA;">
-            <div class="product-detail-breadcrumb">
+            <div class="product-detail-breadcrumb hide-in-responsive">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
@@ -262,8 +262,8 @@
             </div>
             <div class="product__details__pic prdDetailImg" style="background-color: unset;">
                 <div class="container">
-                    <div id="carouselExampleIndicators" class="carousel slide show-in-responsive" data-ride="carousel">
-                        <ol class="carousel-indicators">
+                    <div id="carouselExampleIndicators" class="carousel slide show-in-responsive mb-4" data-ride="carousel">
+                        <ol class="carousel-indicators" style="bottom: -30px !important;">
                         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
@@ -292,8 +292,8 @@
                         </div>
                         </div>
                     </div>
-                    <div class="row hide-in-responsive-flex">
-                        <div class="col-lg-6 col-md-9">
+                    <div class="row">
+                        <div class="col-lg-6 col-md-9 hide-in-responsive">
                             <div class="tab-content h-100">
                                 <div class="tab-pane active h-100" id="tabs-4" role="tabpanel">
                                     <div class="product__details__pic__item h-100">
@@ -327,7 +327,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-1 col-md-1">
+                        <div class="col-lg-1 col-md-1 hide-in-responsive">
                             <ul class="nav nav-tabs" role="tablist">
                                 <li class="nav-item">
                                     <a class="nav-link active" data-toggle="tab" href="#tabs-4" role="tab">
@@ -372,7 +372,7 @@
                                 <div class="col-12">
                                     <div class="row">
                                         <div class="col-lg-12 col-md-12">
-                                            <h4><strong>Áo phông nữ cotton dáng ngắn in chữ</strong></h4>
+                                            <h4 class="mt-3"><strong>Áo phông nữ cotton dáng ngắn in chữ</strong></h4>
                                         </div>
                                         <div class="col-lg-12 col-md-12 mt-2 d-flex">
                                             <div class="star-group1 mr-2">
@@ -385,16 +385,18 @@
                                             <span>18 đánh giá | Đã bán: 20</span>
                                         </div>
                                         <div class="col-lg-12 col-md-12 mt-3">
-                                            <h4><strong>149.500 đ</strong></h4>
+                                            <h4 class="hide-in-responsive"><strong>149.500 đ</strong></h4>
+                                            <h2 class="show-in-responsive"><strong>149.500 đ</strong></h2>
                                         </div>
                                         <div class="col-lg-12 col-md-12 mt-2">
-                                            <h6><del>299.000 đ</del>   <strong class="text-danger"> -50%</strong></h6> 
+                                            <h6 class="hide-in-responsive"><del>299.000 đ</del>   <strong class="text-danger"> -50%</strong></h6> 
+                                            <h4 class="show-in-responsive"><del>299.000 đ</del>   <strong class="text-danger"> -50%</strong></h4> 
                                         </div>
                                         <div class="col-lg-12 col-md-12 mt-3">
                                             <span>Màu sắc:</span>
                                         </div>
                                         <div class="col-lg-12 col-md-12 mt-2">
-                                            <div class="shop__sidebar__color">
+                                            <div class="shop__sidebar__color hide-in-responsive">
                                                 <label class="c-11" for="sp-11">
                                                     <input type="radio" id="sp-11">
                                                 </label>
@@ -402,9 +404,25 @@
                                                     <input type="radio" id="sp-10">
                                                 </label>
                                             </div>
+                                            <div class="shop__sidebar__color show-in-responsive">
+                                                <div style="display: inline-block;
+                                                padding: 10px 8px 0px 8px;
+                                                border: 1px solid #b6b5b5; margin-right: 10px;">
+                                                    <label class="c-11" for="sp-11">
+                                                        <input type="radio" id="sp-11">
+                                                    </label>
+                                                </div>
+                                                <div style="display: inline-block;
+                                                padding: 10px 8px 0px 8px;
+                                                border: 1px solid #b6b5b5;">
+                                                    <label class="c-10" for="sp-10">
+                                                        <input type="radio" id="sp-10">
+                                                    </label>
+                                                </div>
+                                            </div>
                                         </div>
                                         <div class="col-lg-12 col-md-12 mt-2">
-                                            <span>Kích cỡ: <a href="#">Hướng dẫn chọn size</a></span>
+                                            <span>Kích cỡ: <a style="text-decoration: underline; color: blue;">Hướng dẫn chọn size</a></span>
                                         </div>
                                         <div class="col-lg-12 col-md-12 mt-2">
                                             <div class="shop__sidebar__size">
@@ -428,13 +446,23 @@
                                                 </label>
                                             </div>
                                         </div>
-                                        <div class="col-lg-12 col-md-12 mt-2">
+                                        <div class="col-lg-12 col-md-12 mt-2 show-in-responsive">
+                                            <span>Số lượng: </span>
+                                        </div>
+                                        <div class="col-lg-4 col-md-4 col-sm-12 my-2 pr-2 mb-4 show-in-responsive">
+                                            <div class="number-input" style="border: 1px solid #ddd;">
+                                                <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()" class="minus" style="width: 50px !important;">-</button>
+                                                <input class="quantity" min="0" name="quantity" value="1" type="number" style="border: none; padding: 15px 20px;">
+                                                <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()" class="plus" style="width: 50px !important;">+</button>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-12 col-md-12 mt-2 hide-in-responsive">
                                             <p class="text-primary"><i>Miễn phí giao hàng</i></p>
                                         </div>
                                         <div class="col-lg-12 col-md-12">
-                                            <button type="button" class="btn btn-red btn-block py-2" onclick="showToast()"><i class="fa fa-heart"></i> Thêm yêu thích</button>
+                                            <button type="button" class="btn btn-red btn-block py-2" onclick="showToast()"><i class="fa fa-heart" style="font-size: 20px;"></i> Thêm yêu thích</button>
                                         </div>
-                                        <div class="col-lg-4 col-md-4 col-sm-12 my-2 pr-2 mt-2">
+                                        <div class="col-lg-4 col-md-4 col-sm-12 my-2 pr-2 mt-2 hide-in-responsive">
                                             <div class="number-input" style="border: 1px solid #ddd;">
                                                 <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()" class="minus">-</button>
                                                 <input class="quantity" min="0" name="quantity" value="1" type="number" style="border: none">
@@ -443,7 +471,7 @@
                                         </div>
                                         <div class="col-lg-8 col-md-8 col-sm-12 my-2 pl-2 mt-2">
                                             <button type="button" class="btn border btn-block py-2 bg-white" data-toggle="modal" data-target="#exampleModalCenter">
-                                                <i class="fa fa-cart-plus"></i> Thêm vào giỏ hàng
+                                                <i class="fa fa-cart-plus" style="font-size: 20px;"></i> Thêm vào giỏ hàng
                                             </button>
                                         </div>
                                         <div class="col-lg-12 col-md-12 mt-2">
@@ -623,7 +651,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="custom-pagination mt-5">
+                                <div class="custom-pagination mt-5 hide-in-responsive">
                                     <ul class="page">
                                         <li class="page__numbers active"> 1</li>
                                         <li class="page__numbers">2</li>
