--- a/product-details.html
+++ b/product-details.html
@@ -94,28 +94,28 @@
                 </div>
                 <div class="col-1"></div>
                 <div class="col-9 header-responsive d-flex">
-                    <div class="row w-100 hide-on-menu-responsive-expand">
-                        <div class="col-3">
-                            <i class="fa fa-search d-block text-danger text-center"></i>
-                            <span class="d-block text-center" style="color: black; width: 100%; font-size: 12px;">Tìm kiếm</span>
+                    <div class="row w-100 hide-on-menu-responsive-expand justify-content-end align-items-end">
+                        <div class="col-2">
+                            <i class="fa fa-search d-block text-color-web text-center"></i>
+                            <!-- <span class="d-block text-center" style="color: black; width: 100%; font-size: 12px;">Tìm kiếm</span> -->
                         </div>
-                        <div class="col-3">
-                            <i class="fa fa-heart d-block text-danger text-center"></i>
-                            <span class="d-block text-center" style="color: black; width: 100%; font-size: 12px;">Yêu thích</span>
+                        <div class="col-2">
+                            <i class="fa fa-heart d-block text-color-web text-center"></i>
+                            <!-- <span class="d-block text-center" style="color: black; width: 100%; font-size: 12px;">Yêu thích</span> -->
                         </div>
-                        <div class="col-3">
-                            <a href="./shopping-cart.html" class="d-block m-0"><i class="fa fa-shopping-bag d-block text-danger text-center"></i></a>
-                            <span class="d-block text-center cursor-pointer"><a href="./shopping-cart.html" style="color: black; width: 100%; font-size: 12px;">Giỏ hàng</a></span>
+                        <div class="col-2">
+                            <a href="./shopping-cart.html" class="d-block m-0"><i class="fa fa-shopping-bag d-block text-color-web text-center"></i></a>
+                            <!-- <span class="d-block text-center cursor-pointer"><a href="./shopping-cart.html" style="color: black; width: 100%; font-size: 12px;">Giỏ hàng</a></span> -->
                         </div>
-                        <div class="col-3">
-                            <i class="fa fa-bars d-block text-danger text-center"></i>
-                            <span class="navbar-toggler d-block text-center cursor-pointer p-0" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation" onclick="onShowMenuResponsive()"><a style="color: black; width: 100%; font-size: 12px;">Danh mục</a></span>
+                        <div class="col-2" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation" onclick="onShowMenuResponsive()">
+                            <i class="fa fa-bars d-block text-color-web text-center"></i>
+                            <!-- <span class="navbar-toggler d-block text-center cursor-pointer p-0" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation" onclick="onShowMenuResponsive()"><a style="color: black; width: 100%; font-size: 12px;">Danh mục</a></span> -->
                         </div>
                     </div>
-                    <div class="row w-100 hide-on-menu-responsive-expand d-none">
+                    <div class="row w-100 hide-on-menu-responsive-expand d-none" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation" onclick="onShowMenuResponsive()">
                         <div class="col-12 text-right">
-                            <i class="fa fa-times text-danger" style="font-size: 30px; padding-right: 15px;"></i>
-                            <span class="navbar-toggler d-block text-right cursor-pointer p-0" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation" onclick="onShowMenuResponsive()"><a style="color: black; width: 100%; font-size: 20px;">Đóng</a></span>
+                            <i class="fa fa-times text-color-web" style="font-size: 30px; padding-right: 15px;"></i>
+                            <!-- <span class="navbar-toggler d-block text-right cursor-pointer p-0" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation" onclick="onShowMenuResponsive()"><a style="color: black; width: 100%; font-size: 20px;">Đóng</a></span> -->
                         </div>
                     </div>
                 </div>
